# PlatformForge

./: --debug  --kube-context  --version  .gitignore  .yamllint.yml  CLAUDE.md  README.md  configure.sh  pyproject.toml
.github/workflows/: build-provider.yml  ci.yml
ansible/: README.md  ansible.cfg
ansible/group_vars/: all.yml
ansible/playbooks/: bootstrap.yml  deploy-all.yml  deploy-continuousdeployment.yml  deploy-devsecops.yml  deploy-dns.yml  deploy-ingress.yml  deploy-observability.yml  deploy-vulnerability-scanning.yml  healthcheck.yml  install-argocd.yml  teardown.yml
ansible/roles/deploy_platform/: templates
argocd/: README.md
argocd/projects/: platform-prod.yml  platform-stage.yml
ci/: helm-matrix.json
platform/: README.md
platform/alloy/: base-values.yaml
platform/argo-rollouts/: base-values.yaml
platform/cert-manager/: base-values.yaml
platform/external-secrets/: README.md  base-values.yaml
platform/falco/: README.md  base-values.yaml
platform/gatekeeper/: README.md  base-values.yaml  networkpolicy.yaml
platform/observability/: README.md  base-values.yaml
platform/prometheus-stack/: base-values.yaml
platform/sealed-secrets/: README.md  base-values.yaml
platform/sigstore-policy-controller/: base-values.yaml
platform/traefik/: README.md  base-values.yaml
platform/trivy-operator/: README.md  base-values.yaml  prometheusrules.yaml
provider/trivy-admission/: Dockerfile  go.mod  main.go
src/platformforge/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_config_io.py  test_models.py
(+187 files in other folders)
